namespace VoterSystem.DataAccess.Config;

public sealed class VotingSettings
{
    public string MasterKey { get; set; } = "";
}