namespace VoterSystem.DataAccess.Token;

public static class TokenIssuerKeys
{
    public const string AuthTokenKey = "AuthToken";
    public const string RefreshTokenKey = "RefreshToken";
    public const string UserIdKey = "id";
    public const string UsernameKey = "username";
}